# PicoMillPowerFeed

./: .clangd  .config copy  .gitconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txtbak  CMakePresets.bak  CMakePresets.json  PicoApp.uf2  README.md  build.sh  clean.sh  compile_commands.json  config.esp32.defconfig  config.json  configure.sh  menuconfig.sh  pico-project.code-workspace  pico-sdk  picomill.code-workspace
.devcontainer/: .updateContentCommandMarker  Dockerfile  Dockerfile.ci.nuttx  Dockerfile.esp32  Dockerfile.nuttx.rp2040  Dockerfile.rpi  build-nuttx.sh  devcontainer.json
apps/: PicoMillPowerFeed
apps/Machine/: Kconfig  Make.defs  Makefile
bak/: LittleFSSettings.cxx
cmake/: raspberrypi-pico.cmake
nuttx-export-12.8.0/: .config  System.map
nuttx-export-12.8.0/registry/: getprime.bdat  getprime.pdat  qe.bdat  qe.pdat
nuttx-export-12.8.0/scripts/: Make.defs  gnu-elf.ld  target.cmake
nuttx-export-12.8.0/tools/: copydir.bat
pico/pico-examples/pio/quadrature_encoder/: quadrature_encoder.c
pio/: stepper.pio
src/: Assert.hxx  CMakeLists.txt  Common.cpp  Common.cxx  Common.hpp  Common.hxx  Delay.cpp  Delay.cxx  Delay.hpp  Delay.hxx  Display.cpp  Display.cxx  Display.hpp  Display.hxx  Encoder.cpp  Encoder.hpp  Encoder.hxx  Event.hpp  Event.hxx  FreeRTOSConfig.h  FreeRTOS_Helpers.c  Helpers.hpp  Helpers.hxx  Kconfig  MachineState.cpp  MachineState.cxx  MachineState.hpp  MachineState.hxx  Make.defs  Makefile  Mutex.hxx  PIOStepper.cpp  PIOStepper.hpp  Settings.cxx  Settings.hpp  Settings.hxx  State.cpp  State.hpp  Stepper.cpp  Stepper.hpp  (+18 more)
src/config/: config.h.in  config.json  generate_littlefs_image.cmake
src/drivers/: ConsoleDisplay.cxx  ConsoleDisplay.hxx  LittleFSSettings.cxx  LittleFSSettings.hxx  Makefile  PIOStepper.cpp  PIOStepper.cxx  PIOStepper.hpp  PIOStepper.hxx  PicoFlashSettings.cpp  PicoFlashSettings.hpp  PicoSSD1306Display.cpp  PicoSSD1306Display.cxx  PicoSSD1306Display.hpp  PicoSSD1306Display.hxx  RP2040_HAL.cpp  RP2040_HAL.hpp  SDIOSettings.cpp  SDIOSettings.cxx  SDIOSettings.hpp  SDIOSettings.hxx  SSD1306Display.cxx  SSD1306Display.hxx  Switches.cxx  Switches.hxx
src/drivers/USBMassStorage/: LittleFSSettings.cxx  LittleFSSettings.hxx  TinyUSBMSC.cxx  TinyUSBMSC.hxx  usb_descriptors.c
src/drivers/display/: ConsoleDisplay.cxx  ConsoleDisplay.hxx  PicoSSD1306Display.cxx  PicoSSD1306Display.hxx  SSD1306Display.cxx  SSD1306Display.hxx
src/drivers/fs/: mimic_fat.h  unicode.c  usb_descriptors.c  usb_msc_driver.c
src/drivers/stepper/: PIOStepperV2.cxx  PIOStepperV2.hxx  PicoStepper.cxx  PicoStepper.hxx
src/drivers/usb/: minic_fat.c  unicode.h
src/lib/PIOStepper/: PIOStepper.cxx  PIOStepper.hxx  PIOStepper.pio
src/pio/: stepperDriverV2.pio
tests/: CMakeLists.txt  TestCommon.hpp  TestDisplay.hpp  TestStatics.cxx  TestStepper.hpp  compile_commands.json  config.md  test_Display.cpp  test_MachineState.cpp  test_StepperState.cpp  test_basicStateTest.cpp
tools/: gdbinit-esp32  i2c-scanner-pin-16-17.uf2  i2c-scanner.cpp
tools/linux/: flash-if-new.sh  flash.sh
